--- a/views/editproduct.ejs
+++ b/views/editproduct.ejs
@@ -39,6 +39,11 @@
             </div>
 
             <div class="form-group">
+                <label for="editSlogan">Slogan</label>
+                <textarea type="textarea" id="editSlogan" name="slogan" class="form-control" cols="100" rows="5" tabindex="101" placeholder="Slogan"><%= product.slogan %></textarea>
+            </div>
+
+            <div class="form-group">
                 <label for="editProductDescription">Mô tả</label>
                 <textarea type="textarea" id="editProductDescription" name="description" class="form-control" cols="92" rows="5" tabindex="101" placeholder="Mô tả"><%= product.description %></textarea>
             </div>
