--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -374,7 +374,7 @@
         <h2 style="text-decoration: underline;">CHI TIẾT SẢN PHẨM</h2>
     </div>
     <div class="container">
-        <form method="POST" action="/buynow/<%= product[0]._id %>">
+        <form method="POST" action="/checkout<%= product[0]._id %>">
             <section class="mb-4">
                 <div class="row">
                     <div class="col-md-5 mb-4 mb-md-0">
