--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -449,7 +449,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <a data-toggle="modal" data-target="#modal-size-guide" class="btn btn-primary btn-md mr-1 mb-2" style="background-color: #111;">Hướng dẫn chọn size</a><br>
+                        <a data-toggle="modal" data-target="#modal-size-guide" class="btn btn-primary btn-md mr-1 mb-2" style="background-color: #111;">Hướng dẫn chọn size</a><br><br>
                         <p>
                             Để lại tin nhắn cho chúng tôi: (trong trường hợp mà bạn chọn nhiều size)
                         </p>
