--- a/views/header.ejs
+++ b/views/header.ejs
@@ -311,7 +311,7 @@
                     </form>
                 </div>
                 <li>
-                    <a><span class="glyphicon glyphicon-heart-empty" style="color: black;" onclick="openNav()"></span></a>
+                    <a><span class="glyphicon glyphicon-search" style="color: black;" onclick="openNav()"></span></a>
                 </li>
             </li>
         </ul>
