--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -27,7 +27,7 @@
 
 <body>
     <div style="text-align: center;" class="container">
-        <h2>Quản lý người dùng</h2>
+        <h2><a href="/" >Trang chủ/</a>Quản lý người dùng</h2>
     </div>
     <div class="container">
         <div class="user">
@@ -42,7 +42,7 @@
                 <select>
             <option value="10">10</option>
             <option value="15">15</option>
-            <option value="20">20</option> 
+            <option value="20">20</option>
         </select></p>
         </div>
 
@@ -107,7 +107,7 @@
                             </td>
                         </tr>
                         <% } %>
-                            <% } %>
+                    <% } %>
             </tbody>
         </table>
     </div>
