--- a/views/producttable.ejs
+++ b/views/producttable.ejs
@@ -23,7 +23,7 @@
 
 <body>
     <div class="container">
-        <h2 style="text-align: center;">Kho hàng</h2>
+        <h2 style="text-align: center;"><a href="/">Trang chủ/</a>Kho hàng</h2>
     </div>
 
     <!--buton add new product-->
